define a skill level for the player (more strike occurs :)) handle Game over exception
