# gui/display/openapi/openapi.yaml
@@ -89,6 +89,9 @@ components:
         name:
           type: string
           description: "player name"
+        rookie:
+          type: integer
+          description: "player skills, a number between 0 and 1. 1 is worse. 0 is awesome"
       required:
         - name
     ScoreBean:
@@ -134,9 +137,22 @@ components:
     ErrorBean:
       type: object
       properties:
+        errorCode:
+          type: integer
+          description: "Error code, same value as the HTTP status, or dedicated values for some specific errors."
+          enum:
+            - 400
+            - 404
+            - 500
+            - 1401
+          x-enum-varnames:
+            - BAD_PARAMETER
+            - NOT_FOUND
+            - INTERNAL_ERROR
+            - GAME_OVER
         message:
           type: string
           description: "Error message"
       required:
-        - code
+        - errorCode
         - message
