# server/src/main/java/com/demo/server/controller/BowlingExceptionHandler.java
@@ -1,6 +1,8 @@
 package com.demo.server.controller;
 
 import com.demo.kata.bowling.BowlingException;
+import com.demo.server.model.ErrorBean;
+import com.demo.server.model.ErrorBeanErrorCode;
 import io.micronaut.context.annotation.Requires;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
@@ -9,10 +11,11 @@ import jakarta.inject.Singleton;
 
 @Singleton
 @Requires(classes = {BowlingException.class})
-public class BowlingExceptionHandler implements ExceptionHandler<BowlingException, HttpResponse<String>> {
+public class BowlingExceptionHandler implements ExceptionHandler<BowlingException, HttpResponse<ErrorBean>> {
   @Override
-  public HttpResponse<String> handle(HttpRequest request, BowlingException exception) {
-    return HttpResponse.serverError(exception.getMessage());
+  public HttpResponse<ErrorBean> handle(HttpRequest request, BowlingException exception) {
+    ErrorBean errorBean = new ErrorBean(ErrorBeanErrorCode.GAME_OVER, exception.getMessage());
+    return HttpResponse.serverError(errorBean);
   }
 }
 
